--- a/App-Reinaldo-Fotos/package.json
+++ b/App-Reinaldo-Fotos/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "jquery": "^3.6.0",
+    "lightbox": "^0.5.0",
+    "ngx-lightbox": "^2.6.1",
     "ngx-slick-carousel": "^0.6.0",
     "rxjs": "~7.5.0",
     "slick-carousel": "^1.8.1",
