criação da API e inserção de um novo álbum e alteração de componentes

--- a/API/.env.example
+++ b/API/.env.example
@@ -1,5 +1,6 @@
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
-APP_KEY=60xIGdh2BjK-o47MISCcV_i5VQBXQvRm
+APP_KEY=dbQ4njUfohLfmsPczf5SADCnBoeKuPyE
 DRIVE_DISK=local
+DB_CONNECTION=sqlite
